# 2dGame

./: CMakeLists.txt  LICENSE  README.md
3party/glad/: glad.c  glad.h
Core/: APP.cpp  APP.hpp  Global_H.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  OpenGL.cpp  OpenGL.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
Shaders/: Traingl.frag  Traingl.vert
src/: Game.cpp  main.cpp
